@@ -1,17 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 10.00
-# Visual Studio 2008
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "DocSite", "..\docs\DocSite\DocSite.csproj", "{39CED32B-8B35-4099-B167-F3B228BFE6B4}"
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Release|Win32 = Release|Win32
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{39CED32B-8B35-4099-B167-F3B228BFE6B4}.Release|Win32.ActiveCfg = Release|Any CPU
-		{39CED32B-8B35-4099-B167-F3B228BFE6B4}.Release|Win32.Build.0 = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-EndGlobal
